src/style.css
@import "../node_modules/modern-normalize/modern-normalize.css";

:root {
    line-height: 1;
    font-weight: 400;

    color-scheme: light dark;

    --color-text: black;
    --color-bg: white;
    --color-alt: hsl(0, 0%, 90%);

    color: var(--color-text);
    background-color: var(--color-bg);

    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

@media (prefers-color-scheme: dark) {
    :root {
        --color-text: white;
        --color-bg: black;
        --color-alt: hsl(0, 0%, 90%);
    }
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;
    place-items: center;
    min-height: 100vh;
}

header {
    display: flex;
    width: 100%;
    align-items: center;
    gap: 1rem;
    padding-inline: 1rem;
    border-bottom: 1px solid var(--color-alt);
    position: sticky;
    top: 0px;
    background-color: var(--color-bg);
    z-index: 5;
}

button[popovertarget] {
    background: none;
    border: none;

    &:hover {
        text-decoration: underline;
    }
}

#btn-categories {
    anchor-name: --btn-categories;
}

#popover-categories {
    width: fit-content;
    height: fit-content;
    margin: unset;

    top: calc(anchor(bottom) + 0.9rem);
    justify-self: anchor-center;

    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    visibility: hidden;
    &:popover-open {
        visibility: visible;
    }
}

.products {
    display: grid;
    width: 100%;
    gap: 1rem;
    padding: 3rem;

    border-top: 1px solid var(--color-alt);

    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
}

.card {
    display: flex;
    flex-direction: column;
    width: 15rem;
    height: 23rem;
    border: 1px solid var(--color-alt);
    padding: 0.5rem;
    gap: 0.5rem;
}

.card > * {
    margin: 0;
}

.card:hover > .product-name {
    text-decoration: underline;
}

@media (prefers-reduced-motion: no-preference) {
    .card:hover {
        scale: 105%;
        transition: scale 0.1s ease-in-out;
    }
}

.deals-card {
    display: flex;
    width: 100%;
    height: 20rem;
    padding-inline: 3rem;
    padding-block: 1.5rem;
    gap: 0.5rem;
}

.deal-image {
    height: 100%;
    width: 50%;
    background-color: var(--color-alt);
}

.spacer {
    margin-block: auto;
    margin-inline: auto;
}

.product-name {
    font-size: 1.3rem;
}

.product-image {
    display: block;
    width: 100%;
    flex: 0 1;
    background-color: var(--color-alt);
}

.price {
    width: fit-content;
    padding-inline: 0.2rem;
}

a:has(h1) {
    color: var(--color-text);
    text-decoration: none;
}

a > h1 {
    font-size: 1rem;
}

footer {
    display: flex;
    width: 100%;
    min-height: 10rem;
    padding: 1rem;
    background-color: var(--color-alt);
}

